--- a/quiz/game.css
+++ b/quiz/game.css
@@ -78,3 +78,17 @@
         transform: rotate(360deg);
     }
 }
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 30px;
+    width: 100%;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: #c91aff;
+    color: #f3ccff;
+    text-align: center;
+    font-size: 1.3rem;
+}
