--- a/animal/animal.css
+++ b/animal/animal.css
@@ -84,5 +84,16 @@ a {
 .back {
     background-color: #3e1f47;
     transform: rotateY(180deg);
-   
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 30px;
+    width: 100%;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: #c91aff;
+    color: #f3ccff;
 }
