--- a/quiz/app.css
+++ b/quiz/app.css
@@ -126,3 +126,17 @@ input {
 input::placeholder {
     color: #aaa;
 }
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 30px;
+    width: 100%;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: #c91aff;
+    color: #f3ccff;
+    text-align: center;
+    font-size: 1.3rem;
+}
