--- a/quiz/highScores.css
+++ b/quiz/highScores.css
@@ -12,3 +12,17 @@
 .high-score:hover {
     transform: scale(1.025);
 }
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    height: 30px;
+    width: 100%;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: #c91aff;
+    color: #f3ccff;
+    text-align: center;
+    font-size: 1.3rem;
+}
