--- a/memory-game-master/assets/styles.css
+++ b/memory-game-master/assets/styles.css
@@ -23,18 +23,7 @@ html {
     margin-bottom: 20px;
 }
 
-button {
-    background: #282A3A;
-    color: #FFF;
-    border-radius: 5px;
-    padding: 10px 20px;
-    border: 0;
-    cursor: pointer;
-    font-family: Fredoka;
-    font-size: 18pt;
-}
-
-.btn {
+button, .btn {
     background: #282A3A;
     color: #FFF;
     border-radius: 5px;
@@ -45,6 +34,11 @@ button {
     font-size: 18pt;
     text-decoration: none;
 }
+@media screen and (max-width: 500px) {
+    button, .btn {
+        font-size: 9pt;
+    }
+}
 
 .disabled {
     color: #757575;
@@ -53,6 +47,11 @@ button {
 .stats {
     color: #FFF;
     font-size: 14pt;
+}
+@media screen and (max-width: 500px) {
+    .stats {
+        font-size: 8pt;
+    }
 }
 
 .board-container {
@@ -76,6 +75,10 @@ button {
     grid-gap: 20px;
 }
 
+@media screen and (max-width: 500px) {
+    .board {grid-gap: 5px;}
+}
+
 .board-container.flipped .board {
     transform: rotateY(180deg) rotateZ(50deg);
 }
@@ -89,6 +92,12 @@ button {
     width: 100px;
     height: 100px;
     cursor: pointer;
+}
+@media screen and (max-width: 500px) {
+    .card {
+        width: 50px;
+        height: 50px;
+    }
 }
 
 .card-front,
@@ -109,6 +118,12 @@ button {
     text-align: center;
     line-height: 100px;
     background: #FDF8E6;
+}
+@media screen and (max-width: 500px) {
+    .card-back {
+        font-size: 14pt;
+        line-height: 50px;
+    }
 }
 
 .card.flipped .card-front {
