--- a/flippedCard.css
+++ b/flippedCard.css
@@ -72,6 +72,7 @@ p {
 }
 
 .container:hover > .card,
+.container:focus > .card,
 .container:active > .card{
     cursor: pointer;
     transform: rotateY(180deg);
